aks-prod-cluster/qa-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qa-green-project-ns 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
  namespace: qa-green-project-ns
spec:
  selector:
    matchLabels:
      app: green
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: greencontainer
        image: devopesakscr.azurecr.io/qagreenprojectacr:#{Build.BuildId}#
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: green-svc
  namespace: qa-green-project-ns
  labels:
    service: green-svc
spec:
  type: ClusterIP
  selector:
    app: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
