aks-prod-cluster/prod-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress-rule
  namespace: prod-green-project-ns
  annotations:
    kubernetes.io/ingress.class: public-nginx          
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
spec:
  rules:
  - host: prodgreenproject.alokeg.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: green-svc
            port: 80
